objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Class_Leader__c</fullName>
        <description>Full Name of the Class Teacher</description>
        <inlineHelpText>Full Name of the Class Teacher</inlineHelpText>
        <label>Class Leader</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Teacher__c</fullName>
        <description>Full Name of Class Teacher</description>
        <inlineHelpText>Full Name of Class Teacher</inlineHelpText>
        <label>Class Teacher</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>Section Letter</description>
        <label>Section</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_No_Of_Students__c</fullName>
        <description>Total No of Students in the Class</description>
        <inlineHelpText>Total No of Students in the Class</inlineHelpText>
        <label>Total No. Of Students</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Classes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>